--- a/Exercise1.html
+++ b/Exercise1.html
@@ -9,6 +9,9 @@
       background: #333;
       padding: 1rem;
       /* TODO: make nav items flex and space evenly */
+      display: flex;
+      justify-content: space-evenly;
+      padding: 10px 0;
     }
     nav a {
       color: white;
