--- a/Exercise3.html
+++ b/Exercise3.html
@@ -7,6 +7,8 @@
   <style>
     .gallery {
       /* TODO: make 3-column grid */
+      display: grid;
+      grid-template-columns: repeat(3,1fr);
       gap: 10px;
     }
     .gallery img {
@@ -17,7 +19,8 @@
     @media (max-width: 600px) {
       .gallery {
         /* TODO: change to 2-column grid */
-        
+        grid-template-columns: repeat(2,1fr);
+
       }
     }
   </style>
