--- a/Exercise4.html
+++ b/Exercise4.html
@@ -9,6 +9,13 @@
       height: 100vh;
       display: grid;
       /* TODO: define grid-template-areas */
+      grid-template-columns:1fr 2fr 1fr;
+      grid-template-rows:auto 1fr auto ;
+      grid-template-areas: 
+       "header header header"
+       "sidebar main ads"
+       "footer footer footer";
+
       gap: 10px;
     }
     header { background: #3498db; grid-area: header; }
